visibility-settings-fix

--- a/social/static/css/yourbit_core.css
+++ b/social/static/css/yourbit_core.css
@@ -1461,6 +1461,7 @@ only be used for object transforms (shaping and scaling)
         box-shadow: -1px -1px 10px black;
         text-align: center;
         color: white;
+        transition: 0.5s;
 
     }
 
